<resources>
    <string name="app_name">IT-CRON-TEST-TASK</string>
    <string name="retry">Retry</string>
    <string name="no_internet">Check your internet connection. Pull down to refresh</string>
    <string name="server_error">Server error. Please, try again later. Pull down to refresh</string>
    <string name="followers">Followers</string>
    <string name="created_at">Created at</string>
    <string name="following">Following</string>
    <string name="organization">Organization</string>
</resources>