<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".presentation.ui.UserDetailsFragment">

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:indeterminateTint="@color/dark_blue" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            tools:src="@drawable/connection_error" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/main_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Check your internet connection" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color"
            android:text="@string/retry"
            android:textColor="@color/btn_text_color" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_no_avatar" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/main_text_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Nicolas" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/main_text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="nicolas@gmail.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/details_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/org_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_org_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_org"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_org_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/organization"
                android:textSize="16sp"
                android:textColor="@color/sub_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_org_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_organizarion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="Github"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_org_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_org_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_following_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_following"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_following_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/following"
                android:textSize="16sp"
                android:textColor="@color/sub_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_following_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="40"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_following_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_following_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_followers_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_followers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_followers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/followers"
                android:textSize="16sp"
                android:textColor="@color/sub_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_followers_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="40"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_followers_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_followers_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_created_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_created_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/created_at"
                android:textSize="16sp"
                android:textColor="@color/sub_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_created_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="20.03.2024"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintStart_toEndOf="@id/iv_created_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_created_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>